<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:gravity="center"
    android:padding="10dp"
    tools:context=".Activities.LoginActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="197dp"
                android:layout_height="190dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/logo"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_planner_logo_foreground" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/colorWord"
                android:textSize="25sp"
                android:textStyle="italic|bold"
                android:typeface="serif" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    app:srcCompat="@drawable/ic_person_outline_foreground" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorWord">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textPersonName"
                        android:textColor="@color/colorWord" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="35dp"
                    android:layout_height="40dp"
                    app:srcCompat="@drawable/ic_look_foreground" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:textColorHint="@color/colorWord"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/pass"
                        android:inputType="textPassword"
                        android:textColor="@color/colorWord"
                        app:counterEnabled="true"
                        app:counterMaxLength="5" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>


            <CheckBox
                android:id="@+id/cb_remember_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:button="@drawable/button_checkbox"
                android:text="@string/remember_me"
                android:textColor="@color/colorWord" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/btn_login"
                android:shadowColor="#92989E"
                android:shadowDx="2"
                android:shadowDy="2"
                android:text="@string/login"
                android:textColor="@color/colorWord" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>